--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bensweetervest/tiddlywiki-cloudflare-saver",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "TiddlyWiki plugin for saving to GitHub via Cloudflare Functions",
   "main": "dist/cloudflare-saver-plugin.json",
   "engines": {
@@ -53,6 +53,7 @@
     "CHANGELOG.md"
   ],
   "devDependencies": {
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^9.39.2",
     "jest": "^29.0.0"
   },
